--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap");
+@import "landing/Stars";
 
 $darkBlue: #506c8f;
 $lightBlue: #98b7de;
@@ -18,6 +19,12 @@ html {
   font-family: "Poppins";
   background: linear-gradient($darkBlue, $lightPurple);
   color: $fontColor;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 h1 {
@@ -42,7 +49,12 @@ p {
 
 // landing field
 .landing {
+  background-image: url("constants/assets/clouds.svg");
   height: 100vh;
+  width: 100vw;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100vw auto;
   h1 {
     padding-bottom: 0;
     margin-bottom: 0;
