--- a/src/landing/Stars.scss
+++ b/src/landing/Stars.scss
@@ -1,121 +1,143 @@
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+$shooting-time: 3000ms;
+$light: white;
+$dark: grey;
+
+.star {
+  position: absolute;
+  width: 2px;
+  height: 2px;
+  background: rgba(255, 255, 255, 0);
+  border-radius: 5px;
+}
+
+@keyframes twinkle {
+  0% {
+    transform: scale(1, 1);
+    background: rgba(255, 255, 255, 0);
+    animation-timing-function: ease-in;
   }
-  
-  $shooting-time: 3000ms;
-  
-  .night {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    transform: rotateZ(45deg);
-    // animation: sky 200000ms linear infinite;
+  60% {
+    transform: scale(0.8, 0.8);
+    background: rgba(255, 255, 255, 1);
+    animation-timing-function: ease-out;
   }
-  
-  .shooting_star {
+  80% {
+    background: rgba(255, 255, 255, 0);
+    transform: scale(1, 1);
+  }
+  100% {
+    background: rgba(255, 255, 255, 0);
+    transform: scale(1, 1);
+  }
+}
+
+.night {
+  position: absolute;
+  transform: rotateZ(35deg);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 50%;
+}
+
+.shooting_star {
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  width: 20vh;
+  height: 2px;
+  background: linear-gradient(-45deg, $light, $dark);
+  border-radius: 999px;
+  filter: drop-shadow(0 0 6px $light);
+  animation: tail $shooting-time ease-in-out infinite, shooting $shooting-time ease-in-out infinite;
+
+  &::before {
+    content: "";
     position: absolute;
-    left: 50%;
-    top: 50%;
-    width: 100px;
+    top: calc(50% - 1px);
+    right: 0;
+    width: 30px;
     height: 2px;
-    background: linear-gradient(-45deg, rgba(95, 145, 255, 1), rgba(0, 0, 255, 0));
-    border-radius: 999px;
-    filter: drop-shadow(0 0 6px rgba(105, 155, 255, 1));
-    animation:
-      tail $shooting-time ease-in-out infinite,
-      shooting $shooting-time ease-in-out infinite;
-    
-    &::before {
-      content: '';
-      position: absolute;
-      top: calc(50% - 1px);
-      right: 0;
-      width: 30px;
-      height: 2px;
-      background: linear-gradient(-45deg, rgba(0, 0, 255, 0), rgba(95, 145, 255, 1), rgba(0, 0, 255, 0));
-      transform: translateX(50%) rotateZ(45deg);
-      border-radius: 100%;
-      animation: shining $shooting-time ease-in-out infinite;
-    }
-  
-    &::after {
-      content: '';
-      position: absolute;
-      top: calc(50% - 1px);
-      right: 0;
-      width: 30px;
-      height: 2px;
-      background: linear-gradient(-45deg, rgba(0, 0, 255, 0), rgba(95, 145, 255, 1), rgba(0, 0, 255, 0));
-      transform: translateX(50%) rotateZ(45deg);
-      border-radius: 100%;
-      animation: shining $shooting-time ease-in-out infinite;
-      transform: translateX(50%) rotateZ(-45deg);
-    }
-    
-    @for $i from 1 through 20 {
-      &:nth-child(#{$i}) {
-        $delay: random(9999) + 0ms;
-        top: calc(50% - #{random(400) - 200px});
-        left: calc(50% - #{random(300) + 0px});
+    background: linear-gradient(-45deg, $dark, $light, $dark);
+    transform: translateX(50%) rotateZ(45deg);
+    border-radius: 100%;
+    animation: shining $shooting-time ease-in-out infinite;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: calc(50% - 1px);
+    right: 0;
+    width: 30px;
+    height: 2px;
+    background: linear-gradient(-45deg, $dark, $light, $dark);
+    transform: translateX(50%) rotateZ(45deg);
+    border-radius: 100%;
+    animation: shining $shooting-time ease-in-out infinite;
+    transform: translateX(50%) rotateZ(-45deg);
+  }
+
+  @for $i from 1 through 20 {
+    &:nth-child(#{$i}) {
+      $delay: random(9999) + 0ms;
+      top: calc(50% - #{random(400) - 200px});
+      left: calc(100% - #{random(300) + 0px});
+      animation-delay: $delay;
+      opacity: random(50) / 100 + 0.5;
+
+      &::before,
+      &::after {
         animation-delay: $delay;
-        // opacity: random(50) / 100 + 0.5;
-        
-        &::before,
-        &::after {
-          animation-delay: $delay;
-        }
       }
     }
   }
-  
-  @keyframes tail {
-    0% {
-      width: 0;
-    }
-    
-    30% {
-      width: 100px;
-    }
-    
-    100% {
-      width: 0;
-    }
+}
+
+@keyframes tail {
+  0% {
+    width: 0;
   }
-  
-  @keyframes shining {
-    0% {
-      width: 0;
-    }
-    
-    50% {
-      width: 30px;
-    }
-    
-    100% {
-      width: 0;
-    }
+
+  30% {
+    width: 100px;
   }
-  
-  @keyframes shooting {
-    0% {
-      transform: translateX(0);
-    }
-    
-    100% {
-      transform: translateX(300px);
-    }
+
+  100% {
+    width: 0;
   }
-  
-  @keyframes sky {
-    0% {
-      transform: rotate(45deg);
-    }
-    
-    100% {
-      transform: rotate(45 + 360deg);
-    }
+}
+
+@keyframes shining {
+  0% {
+    width: 0;
   }
-  
-  
+
+  50% {
+    width: 30px;
+  }
+
+  100% {
+    width: 0;
+  }
+}
+
+@keyframes shooting {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(300px);
+  }
+}
+
+@keyframes sky {
+  0% {
+    transform: rotate(45deg);
+  }
+
+  100% {
+    transform: rotate(45 + 360deg);
+  }
+}
