--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,8 @@ $bluePurple: #aeaad5;
 $purple: #c49dce;
 $lightPurple: #d1b1cf;
 $fontColor: white;
+$buttonColor: #D1B1CF;
+$buttonHover: rgba(255, 255, 255, 0);
 
 $header1FontSize: 96px;
 $header2FontSize: 48px;
@@ -56,26 +58,41 @@ p {
   .subscribe {
     text-align: center;
   }
+  
   input[type="text" i]{
-    border: 0px;
+    border: 0em;
     border-radius: 7px 0px 0px 7px;
-    width:450px;
-    height:40px;
-    padding-left: 30px;
+    width: 30%;
+    max-width: 33em;
+    min-width: 5em;
+    height: 3em;
+    box-sizing: border-box;
+    padding-left: 2.5em;
   }
-  input[type="text" i]::placeholder{
+  input[type="text"]::placeholder{
     font-family: Poppins;
     opacity: 50%;
+    font-size: 80%;
   }
-  input[type="submit" i]{
-    border: 0px;
+  input[type="submit"]{
+    border: 0em;
     border-radius: 0px 7px 7px 0px;
-    width:150px;
-    height:42px;
-    background: #D1B1CF;
+    width: 10%;
+    max-width: 11em;
+    min-width: 1em;
+    height: 3em;
+    background: $buttonColor;
     font-family: Poppins;
     color: $fontColor;
-    line-height: 0px;
+    line-height: 0em;
+    transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+  }
+  input[type="submit"]:hover{
+    border: 0px solid;
+    outline: 1px solid;
+    box-shadow: inset 0 0 15px white, 0 0 20px white;
+    outline-color: $buttonHover;
+    outline-offset: 20px;
   }
 }
 
