--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,7 @@ $fontColor: white;
 
 $header1FontSize: 96px;
 $header2FontSize: 48px;
+$header3FontSize: 36px;
 $pFontSize: 36px;
 
 $mobileHeader1FontSize: 2vh;
@@ -40,8 +41,12 @@ h1 {
 
 h2 {
   font-weight: bold;
-  text-align: left;
+  text-align: center;
   font-size: $header2FontSize;
+}
+
+h3 {
+  font-size: $header3FontSize;
 }
 
 p {
@@ -89,7 +94,41 @@ p {
 }
 
 //schedule
-.schedule {
+.schedule-panel {
+  background-color: $lightPurple;
+  padding: 2%;
+  border-radius: 15px;
+  width: 50vw;
+  margin: auto;
+  @media (max-width: 991px) {
+    width: 80vw;
+    p {
+      font-size: $mobilepFontSize - 15;
+    }
+  }
+  .border {
+    border-top: 2px solid white;
+  }
+  .time-event {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    text-align: left;
+    @media (max-width: 991px) {
+      flex-direction: column;
+      text-align: center;
+    }
+    strong {
+      font-size: $pFontSize - 15;
+    }
+    p {
+      font-size: $pFontSize - 15;
+      margin: 0 5px 0 5px;
+    }
+    .event {
+      white-space: nowrap;
+    }
+  }
 }
 
 // anecdotes
@@ -124,7 +163,7 @@ ul {
 }
 
 // Fix for jumping arrows
-.carousel-container {
+.schedule {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -158,7 +197,6 @@ ul {
 // Content of slides
 .carousel-slide__content {
   margin-bottom: 19px;
-  font-family: "Open Sans", "Trebuchet MS", sans-serif;
   font-size: 16px;
 
   @media (max-width: $breakpoint-desktop - 1px) {
@@ -168,7 +206,6 @@ ul {
 
 .carousel-slide__author,
 .carousel-slide__source {
-  font-family: "Roboto", arial, sans-serif;
   font-size: 14px;
 
   @media (min-width: $breakpoint-desktop) {
@@ -177,16 +214,37 @@ ul {
 }
 
 .carousel-slide__source {
-  font-style: italic;
-  color: #888;
+  color: $lightPurple;
 }
 
 // Carousel arrows
+.arrow {
+  border: solid white;
+  border-width: 0 10px 10px 0;
+  display: inline-block;
+  padding: 10px;
+}
+
+.right {
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+}
+
+.left {
+  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+}
+
+@media (max-width: 991px) {
+  .arrow {
+    display: none;
+  }
+}
+
 .carousel__arrow {
-  position: relative;
+  position: absolute;
   top: 50%;
   display: block;
-  color: #111;
   cursor: pointer;
   opacity: 0.75;
   transform: translateY(-50%);
@@ -225,9 +283,9 @@ ul {
 
 .carousel__indicator {
   display: block;
-  width: 24px;
-  height: 3px;
-  background-color: #111;
+  width: 5vw;
+  height: 7px;
+  background-color: $darkBlue;
   cursor: pointer;
   opacity: 0.15;
   transition: opacity 0.15s cubic-bezier(0.4, 0, 1, 1);
