--- a/src/App.scss
+++ b/src/App.scss
@@ -128,6 +128,9 @@ p {
       flex-direction: column;
       text-align: center;
     }
+    .bold {
+      font-weight: bold;
+    }
     .event {
       white-space: nowrap;
     }
