--- a/src/App.scss
+++ b/src/App.scss
@@ -20,9 +20,8 @@ $mobilepFontSize: 5vw;
 $desktopMobileToggleWidth: 767px;
 
 html {
-  box-sizing: border-box;
   overflow-x: hidden;
-  max-width: 100%;
+  max-width: 100vw;
   scroll-behavior: smooth;
   font-family: "Poppins";
   background: linear-gradient($darkBlue, $lightPurple);
@@ -34,26 +33,31 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0;
 }
 
 h1 {
   font-weight: bold;
   text-align: center;
   font-size: $header1FontSize;
+  margin: 0;
 }
 
 h2 {
   font-weight: bold;
   text-align: center;
   font-size: $header2FontSize;
+  margin: 0;
 }
 
 h3 {
   font-size: $header3FontSize;
+  margin: 0;
 }
 
 p {
   font-size: $pFontSize;
+  margin: 0;
 }
 
 @media (max-width: $desktopMobileToggleWidth) {
@@ -158,11 +162,43 @@ p {
 
 // contact us
 .contact {
+  height: 50vw;
+  width: 100vw;
+  background-image: url("constants/assets/clouds.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center bottom;
+  @media (max-width: $desktopMobileToggleWidth) {
+    background-size: cover;
+  }
+  p {
+    text-align: center;
+    margin: 0;
+  }
+  .icons {
+    @media (max-width: $desktopMobileToggleWidth) {
+      margin: 0 10vw 0 10vw;
+    }
+    margin: 0 33vw 0 33vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    a {
+      font-size: 3vw;
+      color: white;
+      transition: 0.3s;
+      @media (max-width: $desktopMobileToggleWidth) {
+        color: $darkBlue;
+        font-size: 6vw;
+      }
+      &:hover {
+        color: $darkBlue;
+      }
+    }
+  }
 }
 
 // careosel
-// SASS variable for media query breakpoint
-$breakpoint-desktop: 992px;
 
 // Resetting default styles
 ul {
@@ -193,37 +229,9 @@ ul {
   list-style-type: none;
   text-align: center;
 
-  @media (max-width: $desktopMobileToggleWidth) {
-    padding-right: 60px;
-    padding-left: 60px;
-  }
-
   &--active {
     display: block;
   }
-}
-
-// Content of slides
-.carousel-slide__content {
-  margin-bottom: 19px;
-  font-size: 16px;
-
-  @media (max-width: $desktopMobileToggleWidth) {
-    font-size: 18px;
-  }
-}
-
-.carousel-slide__author,
-.carousel-slide__source {
-  font-size: 14px;
-
-  @media (min-width: $desktopMobileToggleWidth) {
-    font-size: 16px;
-  }
-}
-
-.carousel-slide__source {
-  color: $lightPurple;
 }
 
 // Carousel arrows
