--- a/src/App.scss
+++ b/src/App.scss
@@ -6,7 +6,7 @@ $bluePurple: #aeaad5;
 $purple: #c49dce;
 $lightPurple: #d1b1cf;
 $fontColor: white;
-$buttonColor: #D1B1CF;
+$buttonColor: $lightPurple;
 $buttonHover: rgba(255, 255, 255, 0);
 
 $header1FontSize: 96px;
@@ -79,6 +79,20 @@ p {
   }
 }
 
+// mobile
+.mobile {
+  @media (min-width: $desktopMobileToggleWidth) {
+    display: none;
+  }
+}
+
+// desktop
+.desktop {
+  @media (max-width: $desktopMobileToggleWidth) {
+    display: none;
+  }
+}
+
 // about section
 .about {
 }
@@ -95,14 +109,21 @@ p {
     text-align: center;
     padding: 0;
     margin: 0 auto;
-    
   }
-  .subscribe {
+  .form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  form {
     margin-top: 5vh;
     text-align: center;
+    @media (max-width: $desktopMobileToggleWidth) {
+      margin-top: 3vh;
+    }
   }
-  
-  input[type="text" i]{
+
+  input[type="text" i] {
     border: 0em;
     border-radius: 7px 0px 0px 7px;
     width: 30%;
@@ -111,13 +132,18 @@ p {
     height: 3em;
     box-sizing: border-box;
     padding-left: 2em;
+    @media (max-width: $desktopMobileToggleWidth) {
+      border-radius: 7px;
+      padding: 0 2em 0 2em;
+      width: 50vw;
+    }
   }
-  input[type="text"]::placeholder{
+  input[type="text"]::placeholder {
     font-family: Poppins;
     opacity: 50%;
     font-size: 80%;
   }
-  input[type="submit"]{
+  input[type="submit"] {
     border: 0em;
     border-radius: 0px 7px 7px 0px;
     padding-left: 1em;
@@ -131,8 +157,12 @@ p {
     color: $fontColor;
     line-height: 0em;
     transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+    @media (max-width: $desktopMobileToggleWidth) {
+      border-radius: 7px;
+      width: 50vw;
+    }
   }
-  input[type="submit"]:hover{
+  input[type="submit"]:hover {
     border: 0px solid;
     outline: 1px solid;
     box-shadow: inset 0 0 15px white, 0 0 20px white;
