--- a/src/App.scss
+++ b/src/App.scss
@@ -54,7 +54,6 @@ p {
     text-align: center;
     padding: 0;
     margin: 0 auto;
-    
   }
   .subscribe {
     margin-top: 5vh;
@@ -122,6 +121,16 @@ p {
 
 // sponsors
 .sponsors {
+  h1 {
+    padding-bottom: 0;
+    margin-bottom: 0;
+    margin-top: 25vh;
+  }
+  p {
+    text-align: center;
+    padding: 0;
+    margin: 0 auto;
+  }
 }
 
 // contact us
