--- a/src/App.scss
+++ b/src/App.scss
@@ -12,7 +12,7 @@ $buttonHover: rgba(255, 255, 255, 0);
 $header1FontSize: 96px;
 $header2FontSize: 48px;
 $header3FontSize: 36px;
-$pFontSize: 36px;
+$pFontSize: 24px;
 
 $mobileHeader1FontSize: 10vw;
 $mobileHeader2FontSize: 6vw;
@@ -141,33 +141,34 @@ p {
   input[type="text"]::placeholder {
     font-family: Poppins;
     opacity: 50%;
-    font-size: 80%;
   }
-  input[type="submit"] {
-    border: 0em;
-    border-radius: 0px 7px 7px 0px;
-    padding-left: 1em;
-    padding-right: 1em;
-    width: 50%;
-    max-width: 9em;
-    min-width: 1em;
-    height: 3em;
-    background: $buttonColor;
-    font-family: Poppins;
-    color: $fontColor;
-    line-height: 0em;
-    transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
-    @media (max-width: $desktopMobileToggleWidth) {
-      border-radius: 7px;
-      width: 50vw;
-    }
+}
+input[type="submit"] {
+  border: 0em;
+  border-radius: 0px 7px 7px 0px;
+  padding-left: 1em;
+  padding-right: 1em;
+  width: 50%;
+  max-width: 9em;
+  min-width: 1em;
+  height: 3em;
+  background: $buttonColor;
+  color: $fontColor;
+  line-height: 0em;
+  transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+  @media (max-width: $desktopMobileToggleWidth) {
+    border-radius: 7px;
+    width: 50vw;
   }
-  input[type="submit"]:hover {
+  &:hover {
     border: 0px solid;
     outline: 1px solid;
     box-shadow: inset 0 0 15px white, 0 0 20px white;
     outline-color: $buttonHover;
     outline-offset: 20px;
+  }
+  &.full-round {
+    border-radius: 7px;
   }
 }
 
@@ -182,11 +183,7 @@ p {
   border-radius: 15px;
   width: 50vw;
   margin: auto;
-  strong {
-    font-size: $mobilepFontSize;
-  }
   p {
-    font-size: $pFontSize - 15;
     margin: 0 5px 0 5px;
     @media (max-width: $desktopMobileToggleWidth) {
       font-size: $mobilepFontSize;
@@ -221,6 +218,46 @@ p {
 }
 
 // meet the team
+.roles {
+  display: flex;
+  flex-direction: row;
+  width: 75vw;
+  margin: 0 auto;
+  justify-content: space-between;
+  @media (max-width: $desktopMobileToggleWidth) {
+    width: 90vw;
+    flex-direction: column;
+  }
+  .role-panel {
+    background-color: $darkBlue;
+    margin: 4% 1%;
+    padding: 5%;
+    border-radius: 15px;
+  }
+  center {
+    margin-top: 10px;
+    .button {
+      text-decoration: none;
+      border: 0em;
+      border-radius: 7px;
+      padding: 5px 10px;
+      width: fit-content;
+      background: $buttonColor;
+      color: $fontColor;
+      line-height: 0em;
+      transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+      &:hover {
+        border: 0px solid;
+        outline: 1px solid;
+        box-shadow: inset 0 0 15px white, 0 0 20px white;
+        outline-color: $buttonHover;
+        outline-offset: 20px;
+      }
+    }
+  }
+}
+
+// meet the team
 .team {
 }
 
@@ -230,11 +267,8 @@ p {
 
 // sponsors
 .sponsors {
-  h1 {
-    padding-bottom: 0;
-    margin-bottom: 0;
-    margin-top: 25vh;
-  }
+  width: 90vw;
+  margin: auto;
   p {
     text-align: center;
     padding: 0;
