--- a/src/contact/Contact.scss
+++ b/src/contact/Contact.scss
@@ -18,3 +18,40 @@ $mobileHeader3FontSize: 5vw;
 $mobilepFontSize: 5vw;
 
 $desktopMobileToggleWidth: 767px;
+
+.contact {
+    height: 50vw;
+    width: 100vw;
+    background-image: url("../constants/assets/clouds.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center bottom;
+    @media (max-width: $desktopMobileToggleWidth) {
+        background-size: cover;
+    }
+    p {
+        text-align: center;
+        margin: 0;
+    }
+    .icons {
+        @media (max-width: $desktopMobileToggleWidth) {
+            margin: 0 10vw 0 10vw;
+        }
+        margin: 0 33vw 0 33vw;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        a {
+            font-size: 3vw;
+            color: white;
+            transition: 0.3s;
+            @media (max-width: $desktopMobileToggleWidth) {
+                color: $darkBlue;
+                font-size: 6vw;
+            }
+            &:hover {
+                color: $darkBlue;
+            }
+        }
+    }
+}
