--- a/src/roles/Roles.scss
+++ b/src/roles/Roles.scss
@@ -18,3 +18,42 @@ $mobileHeader3FontSize: 5vw;
 $mobilepFontSize: 5vw;
 
 $desktopMobileToggleWidth: 767px;
+
+.roles {
+    display: flex;
+    flex-direction: row;
+    width: 75vw;
+    margin: 0 auto;
+    justify-content: space-between;
+    @media (max-width: $desktopMobileToggleWidth) {
+        width: 90vw;
+        flex-direction: column;
+    }
+    .role-panel {
+        background-color: $darkBlue;
+        margin: 4% 1%;
+        padding: 5%;
+        border-radius: 15px;
+    }
+    center {
+        margin-top: 10px;
+        .button {
+            text-decoration: none;
+            border: 0em;
+            border-radius: 7px;
+            padding: 5px 10px;
+            width: fit-content;
+            background: $buttonColor;
+            color: $fontColor;
+            line-height: 0em;
+            transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+            &:hover {
+                border: 0px solid;
+                outline: 1px solid;
+                box-shadow: inset 0 0 15px white, 0 0 20px white;
+                outline-color: $buttonHover;
+                outline-offset: 20px;
+            }
+        }
+    }
+}
