--- a/src/contact/Contact.scss
+++ b/src/contact/Contact.scss
@@ -1,23 +1,5 @@
-$darkBlue: #506c8f;
-$lightBlue: #98b7de;
-$bluePurple: #aeaad5;
-$purple: #c49dce;
-$lightPurple: #d1b1cf;
-$fontColor: white;
-$buttonColor: $lightPurple;
-$buttonHover: rgba(255, 255, 255, 0);
+@import "../variables";
 
-$header1FontSize: 96px;
-$header2FontSize: 48px;
-$header3FontSize: 36px;
-$pFontSize: 24px;
-
-$mobileHeader1FontSize: 10vw;
-$mobileHeader2FontSize: 6vw;
-$mobileHeader3FontSize: 5vw;
-$mobilepFontSize: 5vw;
-
-$desktopMobileToggleWidth: 767px;
 
 .contact {
     height: 50vw;
