--- a/src/team/Team.scss
+++ b/src/team/Team.scss
@@ -1,1 +1,34 @@
 @import "../variables";
+
+.team {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 90vw;
+    margin: auto;
+    text-align: center;
+    @media (max-width: $desktopMobileToggleWidth) {
+        flex-direction: column;
+    }
+    .member {
+        @media (min-width: $desktopMobileToggleWidth) {
+            width: 20vw;
+            margin: 0 10px 0 10px;
+        }
+        @media (max-width: $desktopMobileToggleWidth) {
+            margin: 10px 0 10px 0;
+        }
+        img {
+            width: 200px;
+        }
+        .limited {
+            margin: auto;
+            height: 200px;
+            width: 200px;
+            overflow: hidden;
+            background-color: $darkBlue;
+            border-radius: 360px;
+            display: block;
+        }
+    }
+}
