--- a/src/roles/Roles.scss
+++ b/src/roles/Roles.scss
@@ -16,6 +16,10 @@
         padding: 15px;
         border-radius: 15px;
         text-align: center;
+        min-height: 50vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
     }
     center {
         margin-top: 10px;
