--- a/src/roles/Roles.scss
+++ b/src/roles/Roles.scss
@@ -16,7 +16,7 @@
         padding: 15px;
         border-radius: 15px;
         text-align: center;
-        min-height: 50vh;
+        min-height: 40vh;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -29,10 +29,11 @@
             border-radius: 7px;
             padding: 5px 10px;
             width: fit-content;
-            background: $buttonColor;
-            color: $fontColor;
+            background: $fontColor;
+            color: $purple;
             line-height: 0em;
             transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+            text-transform: uppercase;
             &:hover {
                 border: 0px solid;
                 outline: 1px solid;
