--- a/src/landing/Landing.scss
+++ b/src/landing/Landing.scss
@@ -2,74 +2,14 @@
 
 .landing {
   height: 100vh;
-  h1 {
-    padding-bottom: 0;
-    margin-bottom: 0;
-    margin-top: 25vh;
-  }
-  p {
-    text-align: center;
-    padding: 0;
-    margin: 0 auto;
-    font-size: 25px;
-  }
-  .form {
+  display: flex;
+  flex-direction: row;
+  .register {
+    margin: auto;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-  }
-  form {
-    margin-top: 5vh;
-    text-align: center;
-    @media (max-width: $desktopMobileToggleWidth) {
-      margin-top: 3vh;
+    & > * {
+      margin: 5px;
     }
-  }
-
-  input[type="text" i] {
-    @media (max-width: $desktopMobileToggleWidth) {
-      border-radius: 7px;
-      padding: 0 2em 0 2em;
-      width: 50vw;
-    }
-    border: 0em;
-    border-radius: 7px 0px 0px 7px;
-    width: 30%;
-    max-width: 33em;
-    min-width: 5em;
-    height: 3em;
-    box-sizing: border-box;
-    padding-left: 2em;
-  }
-  input[type="text"]::placeholder {
-    font-family: Poppins;
-    opacity: 50%;
-    font-size: 80%;
-  }
-  input[type="submit"] {
-    @media (max-width: $desktopMobileToggleWidth) {
-      border-radius: 7px;
-      width: 50vw;
-    }
-    border: 0em;
-    border-radius: 0px 7px 7px 0px;
-    padding-left: 1em;
-    padding-right: 1em;
-    width: 50%;
-    max-width: 9em;
-    min-width: 1em;
-    height: 3em;
-    background: $buttonColor;
-    font-family: Poppins;
-    color: $fontColor;
-    line-height: 0em;
-    transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
-  }
-  input[type="submit"]:hover {
-    border: 0px solid;
-    outline: 1px solid;
-    box-shadow: inset 0 0 15px white, 0 0 20px white;
-    outline-color: $buttonHover;
-    outline-offset: 20px;
   }
 }
