--- a/src/variables.scss
+++ b/src/variables.scss
@@ -22,3 +22,27 @@ $desktopMobileToggleWidth: 767px;
 .highlight {
     color: $purple;
 }
+
+.buttonStyle {
+    text-decoration: none;
+    .button {
+        border: 0em;
+        border-radius: 7px;
+        width: 100%;
+        background: $fontColor;
+        transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+        cursor: pointer;
+        h3 {
+            text-transform: uppercase;
+            font-size: $pFontSize + 5;
+            color: $purple;
+        }
+        &:hover {
+            border: 0px solid;
+            outline: 1px solid;
+            box-shadow: inset 0 0 15px white, 0 0 20px white;
+            outline-color: $buttonHover;
+            outline-offset: 20px;
+        }
+    }
+}
