--- a/src/landing/Landing.scss
+++ b/src/landing/Landing.scss
@@ -4,6 +4,13 @@
   height: 100vh;
   display: flex;
   flex-direction: row;
+  @media (max-width: $desktopMobileToggleWidth) {
+    flex-direction: column;
+    img {
+      width: 90vw;
+      margin: auto;
+    }
+  }
   .register {
     margin: auto;
     display: flex;
