--- a/src/landing/Landing.scss
+++ b/src/landing/Landing.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   img {
-    width: 50vw;
+    width: 700px;
     margin-right: 40vw;
     margin-top: 15vh;
   }
