--- a/src/roles/Roles.scss
+++ b/src/roles/Roles.scss
@@ -15,7 +15,7 @@
         margin: 4% 1%;
         padding: 15px;
         border-radius: 15px;
-        text-align: center;
+        text-align: left;
         min-height: 40vh;
         display: flex;
         flex-direction: column;
