--- a/src/schedule/Schedule.scss
+++ b/src/schedule/Schedule.scss
@@ -1,158 +1,46 @@
 @import "../variables";
 
 //schedule
-.schedule-panel {
-    background-color: $lightPurple;
-    padding: 2%;
-    border-radius: 15px;
-    width: 50vw;
-    margin: auto;
-    p {
-        margin: 0 5px 0 5px;
-        @media (max-width: $desktopMobileToggleWidth) {
-            font-size: $mobilepFontSize;
-        }
-    }
-    .border {
-        border-top: 2px solid white;
-    }
-    .time-event {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        text-align: left;
-        @media (max-width: $desktopMobileToggleWidth) {
-            flex-direction: column;
-            text-align: center;
-        }
-        .bold {
-            font-weight: bold;
-        }
-        .event {
-            white-space: nowrap;
-        }
-    }
-    @media (max-width: $desktopMobileToggleWidth) {
-        width: 80vw;
-    }
-}
-
-ul {
-    padding: 0;
-    margin: 0;
-    list-style-type: none;
-}
-
-// Fix for jumping arrows
 .schedule {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    min-height: 210px;
     width: 90vw;
     margin: auto;
-}
-
-.carousel {
-    position: relative;
-}
-
-// Carousel slides
-.carousel__slide {
-    margin-right: auto;
-    margin-left: auto;
-    display: none;
-    max-width: 80vw;
-    min-width: 80vw;
-    list-style-type: none;
-    text-align: center;
-
-    &--active {
-        display: block;
-    }
-}
-
-// Carousel arrows
-.arrow {
-    border: solid white;
-    border-width: 0 10px 10px 0;
-    display: inline-block;
-    padding: 10px;
-}
-
-.right {
-    transform: rotate(-45deg);
-    -webkit-transform: rotate(-45deg);
-}
-
-.left {
-    transform: rotate(135deg);
-    -webkit-transform: rotate(135deg);
-}
-
-@media (max-width: $desktopMobileToggleWidth) {
-    .arrow {
-        display: none;
-    }
-}
-
-.carousel__arrow {
-    position: absolute;
-    top: 50%;
-    display: block;
-    cursor: pointer;
-    opacity: 0.75;
-    transform: translateY(-50%);
-    transition: opacity 0.15s cubic-bezier(0.4, 0, 1, 1);
-
-    &:focus {
-        outline: 0;
-    }
-
-    &:hover {
-        opacity: 0.5;
-    }
-
-    &--left {
-        left: 32px;
-    }
-
-    &--right {
-        right: 32px;
-    }
-}
-
-// Carousel indicators
-.carousel__indicators {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    margin-top: 20px;
-
-    li {
-        &:nth-of-type(n + 2) {
-            margin-left: 9px;
+    .dates {
+        display: flex;
+        flex-direction: row;
+        margin: 0 30px 0 50px;
+        padding-top: 15px;
+        .date {
+            background-color: $purple;
+            padding: 5px 10px;
+            border-radius: 5px 5px 0 0;
+            margin-right: 5px;
+            cursor: pointer;
         }
     }
-}
-
-.carousel__indicator {
-    display: block;
-    width: 5vw;
-    height: 7px;
-    background-color: $darkBlue;
-    cursor: pointer;
-    opacity: 0.15;
-    transition: opacity 0.15s cubic-bezier(0.4, 0, 1, 1);
-
-    &:hover {
-        opacity: 0.5;
-    }
-
-    &--active {
-        &,
-        &:hover {
-            opacity: 0.75;
+    .events {
+        background-color: white;
+        padding: 30px;
+        margin: 0 30px 30px 30px;
+        border-radius: 15px;
+        .event {
+            background-color: $lightGrey;
+            margin: auto;
+            border-radius: 15px;
+            margin: 10px;
+            padding: 20px 15px;
+            color: $darkGrey;
+            .details {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                width: 50vw;
+                .start,
+                .end,
+                .presenter {
+                    display: flex;
+                    flex-direction: column;
+                }
+            }
         }
     }
 }
