--- a/src/variables.scss
+++ b/src/variables.scss
@@ -8,15 +8,13 @@ $buttonHover: rgba(255, 255, 255, 0);
 $lightGrey: #d9d9d9;
 $darkGrey: #545454;
 
-$header1FontSize: 96px;
-$header2FontSize: 48px;
+$header2FontSize: 64px;
 $header3FontSize: 30px;
-$pFontSize: 20px;
+$pFontSize: 18px;
 
-$mobileHeader1FontSize: 10vw;
-$mobileHeader2FontSize: 6vw;
-$mobileHeader3FontSize: 5vw;
-$mobilepFontSize: 5vw;
+$mobileHeader2FontSize: 40px;
+$mobileHeader3FontSize: 22px;
+$mobilepFontSize: 17px;
 
 $desktopMobileToggleWidth: 767px;
 
@@ -35,7 +33,6 @@ $desktopMobileToggleWidth: 767px;
         cursor: pointer;
         h3 {
             text-transform: uppercase;
-            font-size: $pFontSize + 5;
             color: $purple;
         }
         &:hover {
@@ -50,7 +47,7 @@ $desktopMobileToggleWidth: 767px;
 
 .panel {
     background-color: $darkBlue;
-    margin: 4% 1%;
+    margin: 15px 1%;
     padding: 15px;
     border-radius: 15px;
     text-align: left;
